Join to unic MockClass