@@ -1,5 +1,4 @@
 package com.dev.timetracker.service;
-
 import com.dev.timetracker.dto.report.DTOUserTime;
 import com.dev.timetracker.entity.EntityTask;
 import com.dev.timetracker.repository.RepositoryTask;
@@ -10,9 +9,10 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.*;
+import java.util.Arrays;
+import java.util.List;
 
-import static com.dev.timetracker.service.ServiceMocks.*;
+import static com.dev.timetracker.Mocks.MocksForTest.*;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
@@ -32,11 +32,11 @@ public class ServiceCalculateUserTimeRankingForProject {
         taskMocks();
     }
 
+
     @Test
     void calculateUserTimeRankingForProject_ShouldReturnSortedRanking() {
         // Arrange
-
-        List<EntityTask> tasks = Arrays.asList(task1, task2, task3);
+        List<EntityTask> tasks = Arrays.asList(task, task2);
         when(repositoryTask.findAllByProjectIdAndActiveTrue(1L)).thenReturn(tasks);
 
         // Act
@@ -45,22 +45,23 @@ public class ServiceCalculateUserTimeRankingForProject {
         // Assert
         assertAll("result",
                 () -> assertEquals(2, result.size(), "Tamanho da lista"),
-                () -> assertEquals("Davi Costa", result.get(0).userName(), "Nome do usuário 1"),
-                () -> assertEquals(6, result.get(0).totalHours(), "Total de horas do usuário 1"),
-                () -> assertEquals("Maria Bonita", result.get(1).userName(), "Nome do usuário 2"),
+                () -> assertEquals("Thiago Silveira", result.get(0).userName(), "Nome do usuário 1"),
+                () -> assertEquals(2, result.get(0).totalHours(), "Total de horas do usuário 1"),
+                () -> assertEquals("Joao Batista", result.get(1).userName(), "Nome do usuário 2"),
                 () -> assertEquals(1, result.get(1).totalHours(), "Total de horas do usuário 2")
         );
 
         verify(repositoryTask, times(1)).findAllByProjectIdAndActiveTrue(1L);
     }
+
     @Test
     void calculateUserTimeRankingForProject_ShouldIgnoreInactiveTasks() {
         // Arrange
-        // Modificar task1 para ser inativa
-        task1.setActive(false);
+        // Modificar task para ser inativa
+        task.setActive(false);
 
-        // Lista de tarefas inclui task1 inativa
-        List<EntityTask> tasks = Arrays.asList(task2, task3);
+        // Lista de tarefas inclui apenas a task ativa
+        List<EntityTask> tasks = List.of(task2);
         when(repositoryTask.findAllByProjectIdAndActiveTrue(1L)).thenReturn(tasks);
 
         // Act
@@ -68,10 +69,11 @@ public class ServiceCalculateUserTimeRankingForProject {
 
         // Assert
         assertAll("result",
-                () -> assertEquals("Davi Costa", result.get(0).userName(), "Nome do usuário"),
-                () -> assertEquals(4, result.get(0).totalHours(), "Total de horas do usuário")
+                () -> assertEquals(1, result.size(), "Tamanho da lista"),
+                () -> assertEquals("Joao Batista", result.get(0).userName(), "Nome do usuário"),
+                () -> assertEquals(1, result.get(0).totalHours(), "Total de horas do usuário")
         );
+
         verify(repositoryTask, times(1)).findAllByProjectIdAndActiveTrue(1L);
     }
-
 }
